--- a/Laerdal.Scripts/Laerdal.Builder.targets
+++ b/Laerdal.Scripts/Laerdal.Builder.targets
@@ -7,12 +7,12 @@
 <!--        # on macos                                                                                         -->
 <!--        dotnet    msbuild                                    \                                             -->
 <!--            Laerdal.Scripts/Laerdal.Builder.targets          \                                             -->
-<!--            '"/m:1"'  '"/p:Laerdal_Version=1.0.x.0"'                                                       -->
+<!--            '"/m:1"'  '"/p:Laerdal_Version_Full=1.0.x.0"'                                                  -->
 <!--                                                                                                           -->
 <!--        # on windows powershell                                                                            -->
 <!--        dotnet   msbuild                                     ^                                             -->
 <!--            Laerdal.Scripts\Laerdal.Builder.targets          ^                                             -->
-<!--            /m:1   /p:Laerdal_Version=1.0.x.0                                                              -->
+<!--            /m:1   /p:Laerdal_Version_Full=1.0.x.0                                                         -->
 <!--                                                                                                           -->
 
 <Project DefaultTargets="BuildProjects">
