--- a/Laerdal.Dfu/Laerdal.Dfu.csproj
+++ b/Laerdal.Dfu/Laerdal.Dfu.csproj
@@ -38,7 +38,7 @@
         <SupportedOSPlatformVersion Condition=" '$(IsForAndroid)'     == 'true' ">21.0</SupportedOSPlatformVersion>
 
         <!-- ios   you will need specific workloads though    dotnet workload install maui -/-version 8.0.402   -->
-        <TargetPlatformVersion Condition="      '$(IsForIOS)'         == 'true' ">17.5</TargetPlatformVersion>
+        <TargetPlatformVersion Condition="      '$(IsForIOS)'         == 'true' ">17.0</TargetPlatformVersion>
         <TargetPlatformMinVersion Condition="   '$(IsForIOS)'         == 'true' ">14.2</TargetPlatformMinVersion>
         <SupportedOSPlatformVersion Condition=" '$(IsForIOS)'         == 'true' ">14.2</SupportedOSPlatformVersion>
     </PropertyGroup>
@@ -82,12 +82,11 @@
     <Import Project="Laerdal.targets"/>
 
     <!-- =========================== PACKAGES ============================ -->    
-    <ItemGroup Condition=" '$(IsForAndroid)' == 'true' ">
-        <PackageReference Include="Laerdal.Dfu.Bindings.Android" Version="2.5.0.43891"/>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+      <PackageReference Include="Laerdal.Dfu.Bindings.Android" Version="2.7.0.43895" />
     </ItemGroup>
-    
-    <ItemGroup Condition=" '$(IsForIOS)' == 'true' ">
-        <PackageReference Include="Laerdal.Dfu.Bindings.iOS" Version="4.13.0.43933"/>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-ios'">
+      <PackageReference Include="Laerdal.Dfu.Bindings.iOS" Version="4.15.3.43942" />
     </ItemGroup>
     <!-- =========================== PACKAGES ============================ -->
 
