--- a/Laerdal.Dfu/Laerdal.Dfu.csproj
+++ b/Laerdal.Dfu/Laerdal.Dfu.csproj
@@ -96,12 +96,16 @@
 
     <!-- =========================== PACKAGES ============================ -->
     <!-- Android -->
-    <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0-android' ">
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
         <PackageReference Include="Laerdal.Dfu.Bindings.Android" Version="2.7.0.43895"/>
     </ItemGroup>
-    <!-- iOS/MacCatalyst -->
-    <ItemGroup Condition=" '$(IsForAppleStuff)' == 'true' ">
-        <PackageReference Include="Laerdal.Dfu.Bindings.iOS" Version="4.15.3.43957"/>
+    <!-- iOS -->
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-ios'">
+      <PackageReference Include="Laerdal.Dfu.Bindings.iOS" Version="4.15.3.43972" />
+    </ItemGroup>
+    <!-- MacCatalyst -->
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-maccatalyst'">
+      <PackageReference Include="Laerdal.Dfu.Bindings.iOS" Version="4.15.3.43972" />
     </ItemGroup>
     <!-- =========================== PACKAGES ============================ -->
 
