--- a/Laerdal.Dfu/Laerdal.Dfu.csproj
+++ b/Laerdal.Dfu/Laerdal.Dfu.csproj
@@ -44,9 +44,9 @@
         <SupportedOSPlatformVersion Condition="  '$(IsForIOS)'          == 'true' ">14.2</SupportedOSPlatformVersion>
 
         <!-- maccatalyst   you will need specific workloads though    dotnet workload install maui -/-version 8.0.402   -->
-        <TargetPlatformVersion Condition="       '$(IsNet8MacCatalyst)' == 'true' ">17.0</TargetPlatformVersion>
-        <TargetPlatformMinVersion Condition="    '$(IsNet8MacCatalyst)' == 'true' ">13.1</TargetPlatformMinVersion>
-        <SupportedOSPlatformVersion Condition="  '$(IsNet8MacCatalyst)' == 'true' ">13.1</SupportedOSPlatformVersion>
+        <TargetPlatformVersion Condition="       '$(IsForMacCatalyst)'  == 'true' ">17.0</TargetPlatformVersion>
+        <TargetPlatformMinVersion Condition="    '$(IsForMacCatalyst)'  == 'true' ">13.1</TargetPlatformMinVersion>
+        <SupportedOSPlatformVersion Condition="  '$(IsForMacCatalyst)'  == 'true' ">13.1</SupportedOSPlatformVersion>
     </PropertyGroup>
 
     <!-- Android -->
